--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,9 +6,13 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
-<ul>
-    <li><a href="users">Users</a></li>
-    <li><a href="meals">Meals</a></li>
-</ul>
+<form action="users" method="post">
+    Выберите пользователя
+    <select name="user">
+        <option value="1"> ADMIN </option>
+        <option value="2"> USER  </option>
+    </select>
+    <input type="submit" value="Показать еду">
+</form>
 </body>
 </html>
